@@ -3,8 +3,8 @@ package com.example.sahibinden.controller;
 import com.example.sahibinden.model.Marka;
 import com.example.sahibinden.model.dto.MarkaRequest;
 import com.example.sahibinden.model.dto.MarkaResponse;
-import com.example.sahibinden.service.KasaService;
 import com.example.sahibinden.service.MarkaService;
+import com.example.sahibinden.utils.TestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,7 +13,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -27,22 +26,23 @@ public class MarkaControllerTest {
 
     @InjectMocks
     private MarkaController markaController;
+
     @Test
     void getMarkaById() {
-        Long markaId = 1L;
-        Marka mockMarka = new Marka();
-        when(markaService.getMarkaById(markaId)).thenReturn(mockMarka);
+        Marka mockMarka = TestUtils.markaBuilder();
+        when(markaService.getMarkaById(mockMarka.getId())).thenReturn(mockMarka);
 
-        ResponseEntity<MarkaResponse> responseEntity = markaController.getMarkaById(markaId);
+        ResponseEntity<MarkaResponse> responseEntity = markaController.getMarkaById(mockMarka.getId());
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
 
-        verify(markaService, times(1)).getMarkaById(markaId);
+        verify(markaService, times(1)).getMarkaById(mockMarka.getId());
     }
+
     @Test
     void getAllMarkalar() {
-        List<Marka> mockMarkalar = Arrays.asList(new Marka(), new Marka());
+        List<Marka> mockMarkalar = List.of(TestUtils.markaBuilder(), TestUtils.markaBuilder());
         when(markaService.getAllMarka()).thenReturn(mockMarkalar);
 
         ResponseEntity<List<MarkaResponse>> responseEntity = markaController.getAllMarkalar();
@@ -53,10 +53,11 @@ public class MarkaControllerTest {
 
         verify(markaService, times(1)).getAllMarka();
     }
+
     @Test
     void addMarka() {
         MarkaRequest mockMarkaRequest = new MarkaRequest();
-        Marka mockAddedMarka = new Marka();
+        Marka mockAddedMarka = TestUtils.markaBuilder();
         when(markaService.addMarka(any(Marka.class))).thenReturn(mockAddedMarka);
 
         ResponseEntity<MarkaResponse> responseEntity = markaController.addMarka(mockMarkaRequest);
@@ -66,20 +67,22 @@ public class MarkaControllerTest {
 
         verify(markaService, times(1)).addMarka(any(Marka.class));
     }
+
     @Test
     void updateMarka() {
-        Long markaId = 1L;
+
         MarkaRequest mockMarkaRequest = new MarkaRequest();
-        Marka mockUpdatedMarka = new Marka();
+        Marka mockUpdatedMarka = TestUtils.markaBuilder();
         when(markaService.updateMarka(any(Marka.class))).thenReturn(mockUpdatedMarka);
 
-        ResponseEntity<MarkaResponse> responseEntity = markaController.updateMarka(markaId, mockMarkaRequest);
+        ResponseEntity<MarkaResponse> responseEntity = markaController.updateMarka(mockUpdatedMarka.getId(), mockMarkaRequest);
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
 
         verify(markaService, times(1)).updateMarka(any(Marka.class));
     }
+
     @Test
     void deleteMarka() {
         Long markaId = 1L;
